  * Added a refresh GV API. Updated notify to use it.
